gke/3-strategy/sample.yaml

apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: playmo
  namespace: playmo
  labels:
    app: playmo
spec:
  virtualhost:
    fqdn: playmo.local
  routes:
  - match: /playmo
    services:
    - name: playmo-v1
      port: 80
      weight: 0
    - name: playmo-v2
      port: 80
      weight: 100
#  - match: /v2
#    services:
#    - name: playmo-v2
#      port: 80
